[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.16"
rayon = "1.6.1"
num_cpus = "1.13.1"
anyhow = "1.0.57"
thiserror = "1.0.31"
crossterm = "0.25.0"
lazy_static = "1.4.0"
backon = "0.4.0"

[dependencies.uuid]
version = "1.3.0"
features = ["v4"]