[package]
name = "utils"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.16"
rayon = "1.6.1"
num_cpus = "1.13.1"
thiserror = "2.0.7"
crossterm = "0.28.1"
lazy_static = "1.4.0"
backon = "1.3.0"

[dependencies.uuid]
version = "1.3.0"
features = ["v4"]